# hotmic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
commands/: config.md  setup.md  start.md  status.md  stop.md
docs/: README_EN.md
docs/design/: 2026-04-14-unified-qwen3-asr-streaming-design.md
hooks/: hooks.json
packaging/: build-dmg.sh
scripts/: exec.py  setup.py
src/hotmic/: __init__.py  _overlay_process.py  config.py  daemon.py  keyboard.py  menubar.py  overlay.py  qwen3_asr_worker.py  qwen3_worker_manager.py  recorder.py  setup.py  sounds.py  streaming_transcriber.py  text_cleaner.py  transcriber.py  whisper_server_manager.py
