[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hotmic"
version = "1.0.0"
description = "Push-to-talk voice dictation for macOS — hold hotkey, speak, text auto-pastes into any app"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Enes Basbug", email = "enesbasbugeng@gmail.com"},
    {name = "xiaohongsimon"},
]
keywords = ["speech-to-text", "stt", "voice", "dictation", "qwen3-asr", "whisper", "macos", "metal", "mlx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.200",
]

[project.urls]
Homepage = "https://github.com/xiaohongsimon/hotmic"
Repository = "https://github.com/xiaohongsimon/hotmic"
Issues = "https://github.com/xiaohongsimon/hotmic/issues"

[project.scripts]
hotmic = "hotmic.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]
